--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,7 +1,17 @@
 /* Global Styles */
 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+
 body {
   background: #f5f8fa;
+  font-family: "Poppins", sans-serif !important;
+  font-weight: 400;
+  font-style: bold;
+}
+
+* {
+  font-family: "Poppins", sans-serif !important;
+  font-weight: 500;
 }
 
 /* .text-muted {
@@ -139,6 +149,7 @@ body {
 }
 
 @keyframes logo-bounce-in {
+
   from,
   20%,
   40%,
@@ -147,23 +158,29 @@ body {
   to {
     animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
   }
+
   0% {
     opacity: 0;
     transform: scale3d(0.3, 0.3, 0.3);
   }
+
   20% {
     opacity: 1;
     transform: scale3d(1.1, 1.1, 1.1);
   }
+
   40% {
     transform: scale3d(0.9, 0.9, 0.9);
   }
+
   60% {
     transform: scale3d(1.03, 1.03, 1.03);
   }
+
   80% {
     transform: scale3d(0.97, 0.97, 0.97);
   }
+
   to {
     opacity: 1;
     transform: scale3d(1, 1, 1);
@@ -174,6 +191,7 @@ body {
   0% {
     stroke-dasharray: 0, 500;
   }
+
   100% {
     stroke-dasharray: 500, 500;
   }
@@ -184,9 +202,11 @@ body {
     stroke-dasharray: 0, 200;
     stroke: transparent;
   }
+
   50% {
     stroke-dasharray: 0, 200;
   }
+
   100% {
     stroke-dasharray: 200, 200;
   }
@@ -196,6 +216,7 @@ body {
   0% {
     fill: transparent;
   }
+
   50% {
     fill: transparent;
   }
@@ -432,3 +453,4 @@ body {
   font-size: 2rem;
   cursor: pointer;
 }
+
